--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="variables.js"></script>
+    <!-- <script src="variables.js"></script>
+    <srcipt src="datatypes.js"></srcipt> -->
+    <script src="string.js"></script>
 </body>
 </html>
