--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    
+    <script src="datatypes.js"></script> 
+    <!-- <script src="string.js"></script> -->
+    <!-- <script src="operator.js"></script> -->
     <!-- <script src="variables.js"></script>
-    <srcipt src="datatypes.js"></srcipt> -->
-    <script src="string.js"></script>
 </body>
 </html>
