--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     
-    <script src="datatypes.js"></script> 
+    <!-- <script src="datatypes.js"></script>  -->
     <!-- <script src="string.js"></script> -->
-    <!-- <script src="operator.js"></script> -->
-    <!-- <script src="variables.js"></script>
+    <script src="operator.js"></script>
+    <!-- <script src="variables.js"></script>-->
+    <h1>This is Index.html</h1>
+    
 </body>
 </html>
