--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     
     <!-- <script src="datatypes.js"></script>  -->
     <!-- <script src="string.js"></script> -->
-    <script src="operator.js"></script>
+    <!-- <script src="operator.js"></script> -->
     <!-- <script src="variables.js"></script>-->
+    <script src="array.js"></script>
     <h1>This is Index.html</h1>
     
 </body>
