--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WORKPLACE</title>
+    <style>
+        h1{
+            color:brown;
+        }
+    </style>
+  </head>
+  <body>
+    <script src="style.css"></script>
     <!-- <script src="datatypes.js"></script>  -->
     <!-- <script src="string.js"></script> -->
     <!-- <script src="operator.js"></script> -->
     <!-- <script src="variables.js"></script>-->
-    <script src="array.js"></script>
-    <h1>This is Index.html</h1>
-    
+    <!-- <script src="array.js"></script> -->
+    <h1><span style="color: orange; font: bold"> This is Index.html</span></h1>
+
+    <div> <h1>github.com Mohit26601</h1>  </div>
+
+
+
 </body>
 </html>
