--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
     </style>
   </head>
   <body>
-    <script src="style.css"></script>
+    <!-- <script src="style.css"></script> -->
     <!-- <script src="datatypes.js"></script>  -->
     <!-- <script src="string.js"></script> -->
     <!-- <script src="operator.js"></script> -->
     <!-- <script src="variables.js"></script>-->
     <!-- <script src="array.js"></script> -->
-    <h1><span style="color: orange; font: bold"> This is Index.html</span></h1>
+    <script src="object.js"></script>
+    <h1><span style="color: orange; font: bold">SERVICENOW</span></h1>
 
-    <div> <h1>github.com Mohit26601</h1>  </div>
+    <div> <h3>WORKPLACE</h3 >  </div>
 
 
 
