--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <!-- <script src="operator.js"></script> -->
     <!-- <script src="variables.js"></script>-->
     <!-- <script src="array.js"></script> -->
-    <script src="object.js"></script>
+    <!-- <script src="object.js"></script> -->
+    <script src="functions.js"></script>
     <h1><span style="color: orange; font: bold">SERVICENOW</span></h1>
 
     <div> <h3>WORKPLACE</h3 >  </div>
