--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <!-- <script src="datatypes.js"></script>  -->
     <!-- <script src="string.js"></script> -->
     <!-- <script src="operator.js"></script> -->
-    <script src="variables.js"></script>
+    <!-- <script src="variables.js"></script> -->
     <!-- <script src="array.js"></script> -->
     <!-- <script src="object.js"></script> -->
-    <!-- <script src="functions.js"></script> -->
+    <script src="functions.js"></script>
     
     <h1><span style="color: orange; font: bold">SERVICENOW</span></h1>
 
