--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <!-- <script src="variables.js"></script> -->
     <!-- <script src="array.js"></script> -->
     <!-- <script src="object.js"></script> -->
-    <script src="functions.js"></script>
+    <!-- <script src="functions.js"></script> -->
+    <script src="conditionalStatement.js"></script>
+
     
     <h1><span style="color: orange; font: bold">SERVICENOW</span></h1>
 
