--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
   </head>
   <body>
     <!-- <script src="style.css"></script> -->
+    <!-- <script src="variables.js"></script> -->
     <!-- <script src="datatypes.js"></script>  -->
     <!-- <script src="string.js"></script> -->
     <!-- <script src="operator.js"></script> -->
-    <!-- <script src="variables.js"></script> -->
-    <!-- <script src="array.js"></script> -->
+    <script src="array.js"></script>
     <!-- <script src="object.js"></script> -->
     <!-- <script src="functions.js"></script> -->
-    <script src="conditionalStatement.js"></script>
+    <!-- <script src="conditionalStatement.js"></script> -->
+
+
 
     
     <h1><span style="color: orange; font: bold">SERVICENOW</span></h1>
