--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <!-- <script src="datatypes.js"></script>  -->
     <!-- <script src="string.js"></script> -->
     <!-- <script src="operator.js"></script> -->
-    <script src="array.js"></script>
+    <!-- <script src="array.js"></script> -->
     <!-- <script src="object.js"></script> -->
     <!-- <script src="functions.js"></script> -->
-    <!-- <script src="conditionalStatement.js"></script> -->
+    <script src="conditionalStatement.js"></script>
 
 
 
