--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <!-- <script src="string.js"></script> -->
     <!-- <script src="operator.js"></script> -->
     <!-- <script src="array.js"></script> -->
-    <script src="object.js"></script>
+    <!-- <script src="object.js"></script> -->
     <!-- <script src="functions.js"></script> -->
     <!-- <script src="conditionalStatement.js"></script> -->
-    <!-- <script src="loops.js"></script> -->
+    <script src="loops.js"></script>
     
 
 
